[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3" 
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v7","serde"] }
time = { version = "0.3.31", features = ["macros","serde","parsing","formatting"] }
serde = {version = "1.0.195", features =["std","derive"]}
serde_json = "1.0.111"
                
